--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "v3-click-outside",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Vue3 directive to react on clicks outside an element. Its simple to use. And can Customizable boundary elements.",
-  "main": "v-click-outside.t",
+  "main": "v-click-outside.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "DayDayUp",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Fate-ui/v-click-outside"
+  },
+  "keywords": [
+    "vue3",
+    "click",
+    "outside",
+    "directive"
+  ]
 }
